The added image after the successful launch and added a message after a successful launch

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
-    <div>
-        <h1>Hello world!</h1>
+    <div class="main">
+        <header class="header">
+            <h1 class="header__logo">webpack-skeleton for develop multi layout landing</h1>
+        </header>
+        <h2 class="start_success">The launch was successful!</h2>
     </div>
 </body>
 
